--- a/Device Interface Manager/Device Interface Manager.csproj
+++ b/Device Interface Manager/Device Interface Manager.csproj
@@ -8,8 +8,8 @@
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x64</Platforms>
     <UseWindowsForms>True</UseWindowsForms>
-    <FileVersion>0.0.9.0</FileVersion>
-    <AssemblyVersion>0.0.9.0</AssemblyVersion>
+    <FileVersion></FileVersion>
+    <AssemblyVersion></AssemblyVersion>
     <ApplicationIcon>DIM.ico</ApplicationIcon>
   </PropertyGroup>
 
