--- a/Device Interface Manager/App.config
+++ b/Device Interface Manager/App.config
@@ -118,6 +118,12 @@
             <setting name="ENET" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="PMDG737CDU0Fullscreen" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="PMDG737CDU1Fullscreen" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Device_Interface_Manager.Properties.Settings>
     </userSettings>
 </configuration>
