--- a/Device Interface Manager/Properties/Settings.settings
+++ b/Device Interface Manager/Properties/Settings.settings
@@ -113,5 +113,11 @@
     <Setting Name="ENET" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="PMDG737CDU0Fullscreen" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="PMDG737CDU1Fullscreen" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
