- fixed "SetBoardOptions" for unsupported device, which cause to deactivate 64 inputs

--- a/Device Interface Manager/Device Interface Manager.csproj
+++ b/Device Interface Manager/Device Interface Manager.csproj
@@ -8,21 +8,21 @@
     <Platforms>x64</Platforms>
     <UseWindowsForms>True</UseWindowsForms>
     <ApplicationIcon>DIM.ico</ApplicationIcon>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <AssemblyVersion>1.1.7.5</AssemblyVersion>
-    <FileVersion>1.1.7.5</FileVersion>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <AssemblyVersion>1.1.7.6</AssemblyVersion>
+    <FileVersion>1.1.7.6</FileVersion>
   </PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-		<DebugType>full</DebugType>
-		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-		<DebugSymbols>False</DebugSymbols>
-		<DebugType>None</DebugType>
-		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
-	</PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <DebugType>full</DebugType>
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <DebugSymbols>False</DebugSymbols>
+    <DebugType>None</DebugType>
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+  </PropertyGroup>
 	
   <ItemGroup>
     <Content Include="LICENSE.txt">
