Added Arduino firmware

--- a/Device Interface Manager/Device Interface Manager.csproj
+++ b/Device Interface Manager/Device Interface Manager.csproj
@@ -24,6 +24,10 @@
     <DebugType>None</DebugType>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Devices\COM\Arduino\Arduino Mega 2560 Firmware\Mega2560\Mega2560.ino" />
+  </ItemGroup>
 	
   <ItemGroup>
     <Content Include="LICENSE.txt">
@@ -105,6 +109,9 @@
     </Resource>
     <Resource Include="Assets\Fonts\PMDG_NG3_DU_C.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Devices\COM\Arduino\Arduino Mega 2560 Firmware\Mega2560\Mega2560.ino">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
 
