- Added PMDG aircraft setting - Added FO EFIS for 3311 MCP

--- a/Device Interface Manager/App.config
+++ b/Device Interface Manager/App.config
@@ -19,6 +19,9 @@
             <setting name="P3D" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="PmdgAircraft" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Device_Interface_Manager.Properties.Settings>
     </userSettings>
 </configuration>
