--- a/Device Interface Manager/Properties/Settings.settings
+++ b/Device Interface Manager/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="P3D" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="PmdgAircraft" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
